# AgentJobs

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
job_agent/: __main__.py  config.py  main.py  models.py
job_agent/collectors/: base.py  infojobs.py  linkedin_indeed.py  tecnoempleo.py
job_agent/filtering/: ai_scorer.py  hard_filters.py
job_agent/notify/: telegram.py
job_agent/storage/: db.py
tests/: conftest.py  test_dedupe.py  test_hard_filters.py  test_telegram_message.py  test_verification.py
