[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
description = "Agente de ofertas de empleo con scoring por IA y envío a Telegram"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["job_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
